# cecli

./: .gitignore  MANIFEST.in  README.md  build.sh  pyproject.toml
.github/workflows/: pages.yml
bright_vision_core/: README.md  __init__.py  async_bridge.py  brand.py  cli_serve.py  event_io.py  git_undo.py  git_workspace.py  gui_progress.py  headless_args.py  headless_stdio.py  http_api.py  http_auth.py  model_router.py  model_router_apply.py  session.py  todo_markdown.py  todo_spec_generate.py  todo_spec_jobs.py  vision_runtime.py  vision_serve.py  workspace_todos.py
bright_vision_core/website/: CNAME  Gemfile  HISTORY.md  README.md  _config.yml  index.html  install.ps1  install.sh
bright_vision_core/website/_data/: architect.yml  blame.yml  code-in-json.yml  deepseek-down.yml  edit_leaderboard.yml  o1_polyglot_leaderboard.yml  o1_results.yml  (+7 more)
cecli/: args.py  io.py  linter.py  main.py  models.py  repomap.py  run_cmd.py  session_crypto.py  sessions.py
cecli/coders/: agent_coder.py  base_coder.py  sub_agent_coder.py
cecli/commands/: add.py  core.py  invoke_agent.py  run.py  switch_agent.py
cecli/helpers/: coroutines.py
cecli/hooks/: registry.py
cecli/prompts/: agent.yml  subagent.yml
cecli/tools/: context_manager.py  delegate.py  grep.py  read_range.py  update_todo_list.py
cecli/tui/: app.py  worker.py
requirements/: common-constraints.txt  requirements-dev.txt  requirements-help.txt  requirements.in
scripts/: 30k-image.py  homepage.py  issues.py  rebrand-website-pass2.py  rebrand-website.py  scm_pep440.sh  sync_bright_vision.sh  vision_jsonl.py  vision_serve.py
tests/basic/: conftest.py  test_async_bridge.py  test_commands.py  test_editblock.py  test_event_io.py  test_event_io_kwargs.py  test_git_workspace.py  test_hello_llm.py  test_http_api.py  test_http_session_todos.py  test_model_pool.py  test_model_router.py  test_session_crypto.py  test_sessions.py  test_sessions_manager.py  test_superproject_integration.py  test_workspace_todos.py
tests/commands/: test_compaction.py  test_switch_agent.py
tests/subagents/: test_delegate.py  test_sub_agent_coder.py
tests/tools/: test_get_lines.py  test_grep.py  test_update_todo_list.py
(+149 files in other folders)
