[project]
name = "bright-vision-core"
description = "Bright Vision Core — cecli engine + headless HTTP API for the Bright Vision desktop app"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
keywords = ["bright-vision", "cecli", "coding-agent", "ollama", "llm", "aider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/Digital-Defiance/bright-vision-core"
Documentation = "https://github.com/Digital-Defiance/bright-vision-core"
Repository = "https://github.com/Digital-Defiance/bright-vision-core"

[project.scripts]
aider-ce = "cecli.main:main"
"cecli" = "cecli.main:main"
"ce.cli" = "cecli.main:main"
bright-vision-core-serve = "bright_vision_core.cli_serve:main"

[tool.setuptools.dynamic]
dependencies = { file = "requirements/requirements.in" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/requirements-dev.in" }
help = { file = "requirements/requirements-help.in" }
playwright = { file = "requirements/requirements-playwright.in" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cecli*", "bright_vision_core*"]

[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cecli/_version.py"
local_scheme = "no-local-version"
# Git tags like v0.111.1.bright0 are not PEP 440; builds use SETUPTOOLS_SCM_PRETEND_VERSION
# (see scripts/scm_pep440.sh) -> 0.111.1+bright0 for PyPI and editable installs.

[tool.codespell]
skip = "*.svg,*.scss,Gemfile.lock,tests/fixtures/*,cecli/website/assets/*"
write-changes = true